# virtualization-framework

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
docs/: project_struct.md
include/virtualization/: loader.hpp  logger.hpp  virtualization.hpp  vm_context.hpp
include/virtualization/backend/hvf/: memory.hpp  vcpu.hpp
include/virtualization/firmware/arm64/: dtb.hpp  gic.hpp  psci.hpp
include/virtualization/network/: network.hpp
include/virtualization/virtio/: block.hpp  console.hpp  gpu.hpp  input.hpp  net.hpp
samples/: CMakeLists.txt  main.cpp  main_display_mac.mm
samples/resources/: entitlements.plist
src/backend/hvf/: exit_handler.cpp  exit_handler.hpp  memory.cpp  vcpu.cpp
src/core/: loader.cpp  logger.cpp  vm.cpp
src/firmware/arm64/: dtb.cpp  gic.cpp  psci.cpp
src/network/: network.cpp
src/virtio/: block.cpp  console.cpp  gpu.cpp  input.cpp  net.cpp
